--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@xmldom/xmldom": "^0.9.3",
     "ansi-colors": "^4.1.3",
     "diff-lines": "^1.1.1",
     "enquirer": "^2.4.1",
@@ -21,7 +22,6 @@
     "ky": "^1.7.2",
     "p-map": "^7.0.2",
     "xml-formatter": "^3.6.3",
-    "xmldom": "^0.6.0",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
