--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
-  "name": "pomeranian",
+  "name": "@timdp/pomeranian",
+  "description": "Like Yarn, but for Maven.",
   "version": "0.0.0",
-  "private": true,
   "type": "module",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/timdp/pomeranian.git"
+  },
+  "author": {
+    "name": "Tim De Pauw",
+    "url": "https://tmdpw.eu"
+  },
+  "engines": {
+    "node": ">=22"
+  },
   "bin": {
     "pomeranian": "./bin/cli.js",
     "pom": "./bin/cli.js"
   },
+  "files": [
+    "bin/",
+    "lib/"
+  ],
   "scripts": {
     "start": "node bin/cli.js",
     "lint": "eslint .",
     "format": "prettier --write --log-level warn . && eslint --fix .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "postversion": "git push && git push --tags"
   },
   "dependencies": {
     "@xmldom/xmldom": "^0.9.3",
@@ -31,5 +48,9 @@
     "neostandard": "^0.11.5",
     "prettier": "^3.3.3",
     "prettier-config-neostandard": "^0.1.0"
+  },
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/timdp"
   }
 }
