--- a/package.json
+++ b/package.json
@@ -1,37 +1,34 @@
 {
   "name": "@timdp/pomeranian",
-  "description": "Like Yarn, but for Maven.",
   "version": "0.2.0",
-  "type": "module",
-  "license": "MIT",
+  "description": "Like Yarn, but for Maven.",
   "repository": {
     "type": "git",
     "url": "https://github.com/timdp/pomeranian.git"
-  },
-  "author": {
-    "name": "Tim De Pauw",
-    "url": "https://tmdpw.eu"
   },
   "funding": {
     "type": "github",
     "url": "https://github.com/sponsors/timdp"
   },
-  "engines": {
-    "node": ">=22"
+  "license": "MIT",
+  "author": {
+    "name": "Tim De Pauw",
+    "url": "https://tmdpw.eu"
   },
+  "type": "module",
   "bin": {
-    "pomeranian": "bin/cli.js",
-    "pom": "bin/cli.js"
+    "pom": "bin/cli.js",
+    "pomeranian": "bin/cli.js"
   },
   "files": [
     "bin/",
     "lib/"
   ],
   "scripts": {
-    "start": "node bin/cli.js",
-    "lint": "eslint .",
     "format": "prettier --write --log-level warn . && eslint --fix .",
+    "lint": "eslint .",
     "prepare": "husky",
+    "start": "node bin/cli.js",
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
@@ -52,6 +49,10 @@
     "lint-staged": "^15.2.10",
     "neostandard": "^0.11.5",
     "prettier": "^3.3.3",
-    "prettier-config-neostandard": "^0.1.0"
+    "prettier-config-neostandard": "^0.1.0",
+    "prettier-plugin-packagejson": "^2.5.2"
+  },
+  "engines": {
+    "node": ">=22"
   }
 }
